Removed and Added some stuff